--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsonapi-mapper",
+  "name": "rb-jsonapi-mapper",
   "version": "0.7.10",
   "description": "JSON API-Compliant Serialization for your ORM",
   "main": "es5/src/mapper.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/scoutforpets/jsonapi-mapper"
+    "url": "https://github.com/dahannajr/jsonapi-mapper"
   },
   "keywords": [
     "json",
@@ -42,7 +42,7 @@
     "inflection": "1.7.2",
     "jasmine": "^2.4.1",
     "jsonapi-serializer": "2.0.4",
-    "lodash": "3.10.1",
+    "lodash": "^3.10.1",
     "qs": "5.2.0",
     "tsd": "^0.6.5",
     "type-check": "^0.3.2",
